--- a/src/app/add-meal-proto/add-meal-proto.component.html
+++ b/src/app/add-meal-proto/add-meal-proto.component.html
@@ -1,4 +1,3 @@
-
 <form [formGroup]="formModel" (ngSubmit)="onAddMeal()" *ngIf="isShowInfo">
   <h2>Dodanie nowego dania :)</h2>
   <label for="name">Nazwa:</label>
@@ -11,12 +10,16 @@
       Nazwa musi mieć co najmniej 3 znaki.
     </small>
   </div>
- 
+
   <label for="category_name">Nazwa kategorii:</label>
   <input type="text" id="category_name" formControlName="category_name">
-  <div *ngIf="category_name?.invalid && (category_name?.dirty || category_name?.touched)" class="alert"></div>
- 
- 
+  <div *ngIf="category_name?.invalid && (category_name?.dirty || category_name?.touched)" class="alert">
+    <small *ngIf="category_name?.errors?.['required']">
+      Nazwa kategorii jest wymagana.
+    </small>
+  </div>
+
+
   <label for="timePrep">Czas przygotowania:</label>
   <input type="number" id="timePrep" formControlName="timePrep">
   <div *ngIf="timePrep?.invalid && (timePrep?.dirty || timePrep?.touched)" class="alert">
@@ -30,8 +33,8 @@
       Czas przygotowania powinien być długością w minutach.<br>
     </small>
   </div>
- 
- 
+
+
   <label for="rating">Trudność przygotowania:</label>
   <input type="number" id="rating" formControlName="rating" min="1" max="5">
   <div *ngIf="rating?.invalid && (rating?.dirty || rating?.touched)" class="alert">
@@ -42,12 +45,8 @@
       Trudność przygotowania powinna być w przedziale 0 - łatwy do 5 - bardzo trudny.<br>
     </small>
   </div>
- 
-  <!-- <label for="categoryId">Id kategorii:</label>
-  <input type="number" id="categoryId" formControlName="categoryId"> -->
-  <!-- <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert"></div> -->
- 
- 
+
+
   <label for="description">Przepis:</label>
   <textarea class="extraLabel" type="string" id="description" formControlName="description"></textarea>
   <div *ngIf="description?.invalid && (description?.dirty || description?.touched)" class="alert">
@@ -55,7 +54,7 @@
       Opis jest wymagany.
     </small>
   </div>
- 
+
   <div formArrayName="ingredientsArray">
     <div *ngFor="let ingredient of ingredients.controls; let i=index" [formGroupName]="i">
       <label>Nowy składnik: </label>
@@ -69,11 +68,20 @@
   </div>
   <button style="width: 21.5rem" type="button" (click)="moreIngredients()">Dodaj składnik</button>
   <div class="tag">
-    <p>Wybierz tagi:</p>
-    <li *ngFor="let tag of tags;index as i; odd as isOdd; even as isEven"(click) = "tagClicked(i)">
-      <button style="width: 10.5rem" type="button" >{{tag}}</button>
-    </li>
-    
+    <div style="width: 50%; float: left">
+      <p>Wybierz tagi:</p>
+      <li *ngFor="let tag of tags;index as i; odd as isOdd; even as isEven" (click)="tagClicked(i)">
+        <button style="width: 10.5rem" type="button">{{tag}}</button>
+      </li>
+    </div>
+    <div style="width: 50%; float: left">
+      <p>Wybrane tagi:</p>
+      <li style="display: inline;" *ngFor="let tag of chosenTags;index as i;">
+        <span style="width: 10.5rem "class="tag"  >• {{tag}} <br></span>
+      </li>
+    </div>
+
+
   </div>
   <button class="button" type="submit" [disabled]="formModel.invalid">Dodaj przepis</button>
   <small *ngIf="formModel.invalid">
@@ -81,6 +89,7 @@
   </small>
 
 </form>
- 
-<button class="button" style="margin-left: 25%;min-width: 50%; color: black; background-color: white;"
+
+<button class="button"
+  style="margin-left: 25%; margin-bottom: 3vh; min-width: 50%; color: black; background-color: white;"
   (click)="isShowInfo = !isShowInfo; showButton = !showButton" *ngIf="showButton">Dodaj Przepis</button>
