--- a/src/app/add-category-proto/add-category-proto.component.html
+++ b/src/app/add-category-proto/add-category-proto.component.html
@@ -17,13 +17,5 @@
 </form>
 
 
-<button class="button" style=" padding: 10px 30px;
-border: none;
-margin-left: 25%;
-border-radius: 10px;
-color: black;
-font-size: 15px;
-font-weight: 700;
-cursor:pointer;
-min-width: 50%;" (click)="isShowInfo = !isShowInfo; showButton = !showButton" *ngIf="showButton">Dodaj
+<button class="button" style="margin-left: 25%; margin-bottom: 3vh; min-width: 50%"  (click)="isShowInfo = !isShowInfo; showButton = !showButton" *ngIf="showButton">Dodaj
   Kategorię</button>
