--- a/src/app/category-proto/category-proto.component.css
+++ b/src/app/category-proto/category-proto.component.css
@@ -42,6 +42,18 @@
     color: #252525;
 
 }
+
+.card .info .title h3 {
+    display: block;
+    position: relative;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    font-size: 30px;
+    font-weight: 700;
+    height: 10vh;
+    width: 40vh; 
+}
 .card .btn{
     display: flex;
     justify-content: space-around;
