--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <span>Pyszniutki</span>
   <div class="spacer"></div>
-  <a mat-button routerLink="/Menu">Home</a>
+  <a mat-button routerLink="/Menu">Strona główna</a>
   <a mat-button routerLink="/Kategorie">Przepisy</a>
   <a mat-button routerLink="/">Contact</a>
 </mat-toolbar>
